# vasputils

./: .gitignore  .travis.yml  Cargo.toml  OUTCAR_o  README.md  rustfmt.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
examples/: OUTCAR
src/: app.rs  format.rs  source.rs  utils.rs
